Fixing issues with font not loading on mobile 4

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+
 body{
   background-color: #EAF2F6;
 }
@@ -6,10 +8,6 @@ body{
   text-align: center;
   width: 100%;
   margin: 0 auto;
-  @font-face {
-    font-family: 'Lexend Deca', sans-serif;
-    src: url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-  }
 }
 
 a{
