--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-*{
-  @font-face {
-    font-family: 'Lexend Deca', sans-serif;
-    src: url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-  }
-}
-
 body {
   margin: 0;
   @font-face {
